-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4.0, 6.4.2, 6.5.3
-
60e49dfbe (dev), 9c1065ce4 (6.7), e1b190c8d (6.6), fb0e70886 (tqtc/lts-6.5), f711ea914 (tqtc/lts-6.2)
-
G&UI Finishing 2023
When using a UniformAnimator in a component that might be destroyed, a crash happens. This issue was detected in TestCases when tap animations haven't completed yet, but test has finished and destroyed component. But also happens in small example I will attach to ticket.
Realized that it also crashes when the duplicate id "root" is removed and the second UniformAnimator is removed, uploaded that updated Main.qml as well as reference.
Somehow attaching the shaders did not work for me, therefore commented them out, but it is the same result with shaders, so attached very simple shader in case "no source" error spams log too much.
- relates to
-
QTBUG-89674 Crash when removing item containing ShaderEffect with a UniformAnimator from the scene
-
- In Progress
-
For Gerrit Dashboard: QTBUG-119363 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
525062,6 | Make sure updateCurrentTime() is done on with a valid ShaderEffect | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
525960,2 | Make sure updateCurrentTime() is done on with a valid ShaderEffect | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
526009,2 | Make sure updateCurrentTime() is done on with a valid ShaderEffect | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
526104,2 | Make sure updateCurrentTime() is done on with a valid ShaderEffect | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
526244,2 | Make sure updateCurrentTime() is done on with a valid ShaderEffect | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |