src/quick/util/qquickanimatorjob_p.h
@@ -280,7 +280,7 @@ public:
 
 private:
     QByteArray m_uniform;
-    QQuickShaderEffect *m_effect = nullptr;
+    QPointer<QQuickShaderEffect> m_effect;
 };
 #endif
 
